fix: optimize Swagger godoc
